hphp/test/quick/call11.php.expectf

Fatal error: Call to undefined method C::foo from context C in %s on line 11
